--- a/css/nav.css
+++ b/css/nav.css
@@ -4,6 +4,7 @@
     padding: 0;
     overflow-x:hidden ;
     scroll-behavior: smooth;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body::-webkit-scrollbar {
@@ -130,6 +131,7 @@ a{
 
 .container{
    display: none;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .toggle{
@@ -187,6 +189,7 @@ a{
     visibility: hidden;
     position: absolute;
     z-index: 100;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .overlay ul{
