--- a/css/nav.css
+++ b/css/nav.css
@@ -46,6 +46,7 @@ a{
     align-items: center;
     justify-content: center;
     font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 #logo img{
