--- a/css/frontline.css
+++ b/css/frontline.css
@@ -8,6 +8,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     display: flex;
     flex-direction: column;
+    scroll-behavior:smooth;
 }
 
 .first{
