--- a/css/problem.css
+++ b/css/problem.css
@@ -2,12 +2,14 @@
 *{
   margin: 0;
   padding: 0;
+  scroll-behavior:smooth;
 }
 
 body{
   font-family: 'Open Sans', sans-serif;
   display: flex;
   flex-direction: column;
+  scroll-behavior:smooth;
 }
 
 .hoverC{
