--- a/about.css
+++ b/about.css
@@ -56,6 +56,7 @@
   align-items: center;
   text-align: center;
   margin-top: -20px;
+    font-family: 'Nanum Pen Script', cursive;
 }
 
 .prf1 .cont{
